# sigmax

./: README.md  pyproject.toml
sigmax/: __init__.py  api.py  config.py  opcodes.py  types.py
